@@ -36,8 +36,6 @@ struct rpmssl_s {
     BIGNUM * rsahm;
 
     BIGNUM * c;
-
-    int type;
 };
 #endif
 
