@@ -1,5 +1,6 @@
 
 5.2a2 -> 5.2a3:
+    - jbj: rpmssl: don't bother with (unused) NID_foo.
     - jbj: use digest names in debugging messages.
     - jbj: name digests according to RFC 4880 section 9.4.
     - jbj: rename s/hdrmd5ctx/hdrctx/ used by RSA to avoid legacy confusions.
